--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <!-- my image -->
               <div class="col-md-4 col-sm-3 col-12">
                 <div class="myImg">
-                  <img class="img-fluid" src="images/me.jpeg" alt="">
+                  <img class="img-fluid" src="images/meme.jpg" alt="">
                 </div>
               </div>
               <!-- /my image -->
@@ -431,8 +431,8 @@
               <div class="btnCate pl-0">
                 <ul class="d-flex pl-0">
                   <li class="all borderClick">All</li>
-                  <li class="fe">Front End</li>
-                  <li class="fs">Full Stack</li>
+                  <!-- <li class="fe">Front End</li>
+                  <li class="fs">Full Stack</li> -->
                 </ul>
               </div>
 
@@ -502,12 +502,11 @@
             </div>
 
             <div class="row content">
-              <div class="col-md-5">
-                <small>Please don't hesitate to contact me for more information about my work. I am available Mon - Sat,
-                  Sunday
-                  is a day of rest.</small>
+              <div class="col-md-12">
+                <small>Please don't hesitate to contact me for more information about my work. </small>
                 <br>
-
+                <small>I am available Mon - Sat, Sunday is a day of rest.</small>
+                <br>
                 <div class="info mt-4">
                   <div class="group clearfix">
                     <div class="label">
@@ -533,22 +532,12 @@
                       <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <div class="value address">
-                      <span>Quang Trung, Ward 10, Go Vap, Ho Chi Minh</span>
+                      <span>Go Vap, Ho Chi Minh</span>
                     </div>
                   </div>
 
                   <div class="social">
                     <ul class="social-btns d-flex">
-
-                      <!-- <li>
-                        <a href="javascript:void(0);" class="social-btn-roll twitter">
-                          <div class="social-btn-roll-icons">
-                            <i class="social-btn-roll-icon fab fa-twitter"></i>
-                            <i class="social-btn-roll-icon fab fa-twitter"></i>
-                          </div>
-                        </a>
-                      </li> -->
-
                       <li>
                         <a href="javascript:void(0);" role="button" style="cursor: pointer"
                           class="social-btn-roll facebook" data-toggle="popover" data-trigger="hover"
@@ -570,41 +559,10 @@
                           </div>
                         </a>
                       </li>
-
-                      <!-- <li>
-                        <a href="javascript:void(0);" class="social-btn-roll instagram">
-                          <div class="social-btn-roll-icons">
-                            <i class="social-btn-roll-icon fab fa-instagram"></i>
-                            <i class="social-btn-roll-icon fab fa-instagram"></i>
-                          </div>
-                        </a>
-                      </li> -->
-
                     </ul>
                   </div>
                 </div>
-
-
               </div>
-              <div class="col-md-1"></div>
-              <div class="col-md-6">
-
-                <form>
-                  <div class="groupform">
-                    <input type="text" placeholder="Your Name">
-                  </div>
-                  <div class="groupform">
-                    <input type="text" placeholder="Your Email">
-                  </div>
-                  <div class="groupform">
-                    <textarea rows="5" placeholder="Your Message"></textarea>
-                  </div>
-                  <button type="submit" class="btnsend">Send</button>
-                </form>
-
-
-              </div>
-
             </div>
           </div>
         </section>
